Update sccs with correct spacing, and correct the class names of two icons

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -9489,7 +9489,7 @@ html {
 [class^="ca-gov-icon-"],
 [class*=" ca-gov-icon-"] {
   font-family: 'CaGov' !important;
-  speak: none;
+  speak: never;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -11382,11 +11382,11 @@ html {
   content: "\4c";
 }
 
-.ca-gov-icon-collapse1:before {
+.ca-gov-icon-collapse:before {
   content: "\58";
 }
 
-.ca-gov-icon-expand1:before {
+.ca-gov-icon-expand:before {
   content: "\59";
 }
 
