--- a/source/scss/cagov/icon-font.scss
+++ b/source/scss/cagov/icon-font.scss
@@ -10,17 +10,17 @@
     font-style: normal
   }
   
-  [class^="ca-gov-icon-"],
-  [class*=" ca-gov-icon-"] {
-    font-family: 'CaGov' !important;
-    speak: none;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale
-  }
+[class^="ca-gov-icon-"],
+[class*=" ca-gov-icon-"] {
+  font-family: 'CaGov' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
   
 .ca-gov-icon-spartan-helmet:before {
   content: "\ea0c";
@@ -1906,11 +1906,11 @@
   content: "\4c";
 }
 
-.ca-gov-icon-collapse1:before {
+.ca-gov-icon-collapse:before {
   content: "\58";
 }
 
-.ca-gov-icon-expand1:before {
+.ca-gov-icon-expand:before {
   content: "\59";
 }
 
